@@ -3,6 +3,7 @@
 	* Changed blob columns to text
 	* Commented CSS_editor code
 	* Changes in formatting according to CGL
+	* Added new "constraints" to EM_CONF
 
 2008-02-14 Dmitry Dulepov  <dmitry@typo3.org>
 
